# terok-shield

./: .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.md  SECURITY.md  demo_interactive.py  mkdocs.yml  properdocs.yml  pyproject.toml  tach.toml
.github/: requirements-ci.txt
.github/workflows/: analysis.yml  ci.yml  docs.yml  integration.yml  inventory.yml  sonar.yml  sonar_pr.yml  test-matrix.yml
docs/: apparmor.md  design.md  developer.md  gen_config_reference.py  gen_quality_report.py  gen_ref_pages.py  gen_test_map.py  index.md  security.md
docs/guide/: cli.md  configuration.md  getting_started.md  logging.md  modes.md  profiles.md
src/terok_shield/: __init__.py  _confine.py  _hub_events.py  _wire_sanitize.py  cli.py  commands.py  config.py  config_file.py  container.py  dbus_bridge.py  dns.py  hardened.py  interactive.py  mode_bridge.py  mode_hook.py  netlink.py  nfqueue.py  nft.py  nft_constants.py  oci_hook.py  paths.py  podman_info.py  policy.py  prereqs.py  profiles.py  registry.py  run.py  simple_clearance.py  standard.py  state.py  subprocess_env.py  validation.py  watch.py
src/terok_shield/cli/: __main__.py  interactive.py  main.py  registry.py  simple_clearance.py  watch.py
src/terok_shield/common/: config.py  podman_info.py
src/terok_shield/core/: dns.py  dnsmasq.py  hook_install.py  mode_hook.py  nft.py  run.py  state.py
src/terok_shield/dns/: __init__.py  apparmor.py  dnsmasq.py  resolver.py
src/terok_shield/hooks/: __init__.py  install.py  mode.py  reader_install.py
src/terok_shield/lib/: audit.py  dbus_bridge.py  profiles.py  watchers.py
src/terok_shield/nft/: __init__.py  constants.py  rules.py
src/terok_shield/podman_info/: __init__.py  _conf.py  hooks_dir.py  info.py  network.py
src/terok_shield/resources/: _oci_state.py  hook_entrypoint.py  nflog_reader.py  nft_hook.py  reader_hook.py  shield_probe.py
src/terok_shield/resources/dns/: krun_guest.txt
src/terok_shield/resources/examples/: base.txt  dev-node.txt  dev-python.txt  dev-standard.txt  krun_guest.txt  nvidia-hpc.txt
src/terok_shield/verbs/: __init__.py  _common.py  control.py  launch.py  observe.py  stream.py
src/terok_shield/watchers/: _event.py  domain_cache.py
tests/: testfs.py  testnet.py
tests/containers/: Containerfile.alpine  Containerfile.debian12  Containerfile.debian13  Containerfile.fedora43  Containerfile.fedora44  Containerfile.mageia  Containerfile.podman  Containerfile.ubuntu2404  Containerfile.ubuntu2604  Containerfile.void  matrix.yml  run-matrix.sh
tests/containers/fragments/: Containerfile.podman
tests/integration/: conftest.py  helpers.py  test_firewall.py
tests/integration/allow_deny/: test_elements.py  test_traffic.py
tests/integration/blocking/: test_default_deny.py
tests/integration/bypass/: README.md  test_cli.py  test_lifecycle.py  test_state.py  test_traffic.py
tests/integration/dns/: test_api_resolve.py  test_dnsmasq_lifecycle.py  test_learned_state.py  test_profiles_pipeline.py  test_resolve_live.py
tests/integration/launch/: test_hook_entrypoint.py  test_lifecycle.py  test_nft_apply.py  test_pre_start.py  test_restart.py
tests/integration/observability/: test_audit.py  test_rules.py
tests/integration/safety/: test_fail_closed.py
tests/integration/setup/: test_config_paths.py  test_environment.py  test_find_nft.py  test_hook_install.py
tests/unit/: conftest.py  test_api.py  test_api_surface.py  test_apparmor.py  test_assembly.py  test_audit_logger.py  test_basic.py  test_bridge_install.py  test_ci_map.py  test_cli.py  test_cli_main_module.py  test_commands.py  test_config.py  test_confine.py  test_container_resolver.py  test_dbus_bridge.py  test_dns_resolver.py  test_dnsmasq.py  test_error_surfacing.py  test_hardened.py  test_hook_entrypoint.py  test_hook_entrypoint_bridge.py  test_hook_entrypoint_isolation.py  test_hook_isolation.py  test_hook_mode_class.py  test_hub_events.py  test_import_cost.py  test_install.py  test_interactive.py  test_mode_bridge.py  test_netlink.py  test_nflog_reader.py  test_nfqueue.py  test_nft.py  test_nft_hook.py  test_nft_interactive.py  test_nft_isolation.py  test_oci_hook.py  test_podman_info.py  test_policy.py  (+16 more)
tests/unit/podman_info/: test_hooks_dir.py  test_info.py  test_network.py
